[package]
name = "credibil-ose"
description = "Credibil information security utilities for signing, encryption and key management."
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Credibil"]
categories = ["cryptography"]
edition = "2024"
exclude = [".*", "snapshots/"]
homepage = "https://credibil.io"
keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
repository = "https://github.com/credibil/ose"
rust-version = "1.86"
version = "0.1.2"

[lib]
# crate-type = ["cdylib", "rlib"]

[lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
aes-gcm = "0.10.3"
aes-kw = { version = "0.2.1", features = ["alloc"] }
anyhow = "1.0.98"
base64ct = { version = "1.7.3", features = ["std"] }
chacha20poly1305 = "0.10.1"
ecdsa = "0.16.9"
ecies = { version = "0.2.9", default-features = false, features = ["pure", "std"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
k256 = "0.13.4"
multibase = "0.9.1"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
serde_repr = "0.1.20"
tracing = "0.1.41"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = "1.8.1"

[dev-dependencies]
hex = "0.4.3"
sha2 = "0.10.8"
signature = "2.2.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
