[package]
name = "test-kms"
description.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
blockstore = "0.7.1"
ciborium = "0.2.2"
cid = "0.11.1"
credibil-ose.workspace = true
ecies.workspace = true
ed25519-dalek.workspace = true
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
rand.workspace = true
serde.workspace = true
x25519-dalek.workspace = true

[dev-dependencies]
tokio.workspace = true
